# DeepDILI2023

./: .dockerignore  .gitignore  Dockerfile  README.md  deep-dili.service  main.py  main_cli.py  main_training.py  mold2_DeepDILI.py  mold2_base_classifier.py  mold2_probabilities.py  mold2_training.py  mold2_training_objs.py  pyproject.toml  run-cli.ps1  run-cli.sh  run-training.ps1  run-training.sh  run.sh  verification.py
data/: expected_ge1997_test_results.csv
data/training/: clean.ps1  clean.sh
mold2-src/: Atom.cpp  Atom.h  Bond.cpp  Bond.h  Calculator1.cpp  Calculator1.h  Calculator2.cpp  Calculator2.h  Calculator3.cpp  Calculator3.h  Calculator4.cpp  Calculator4.h  Calculator5.cpp  Calculator5.h  Calculator6.cpp  Calculator6.h  Calculator7.cpp  Calculator7.h  Calculator8.cpp  Calculator8.h  Constants.cpp  Constants.h  Descriptor.cpp  Descriptor.h  DistanceMatrix.h  DistancePathMatrix.cpp  DistancePathMatrix.h  Elements.cpp  Elements.h  Features.h  Mold2.cpp  Molecule.cpp  Molecule.h  SDfile.cpp  SDfile.h  jama_eig.h  mold2Exception.h  stdafx.cpp  stdafx.h  testSDfile.cxx
webapp/: Scilligence.Icons.js  Scilligence.JSDraw2.Pro.js  Scilligence.JSDraw2.UI.js  deep-dili.js  index.html  spinner.css  styles.css
